
[workspace]
members = [
  "core/simulator",
  "core/controller-mpc",
  "core/controller-rl",
  "core/safety",
  "core/storage",
  "core/api",
  "core/ffi",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
once_cell = "1.19"
nalgebra = "0.32"
ndarray = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
osqp = "0.6"
sprs = "0.11"
clarabel = "0.10"
